# ezserver

./: EasyServer V1.0.xmind  README.md
src/: CMakeLists.txt  datetime.c  datetime.h  main.c  string.c  string.h
src/core/: CMakeLists.txt  epoll.c  epoll.h  event.c  event.h
src/log/: CMakeLists.txt  log.c  log.h
wwwroot/: index.html
